src/test/ui/associated-types/associated-types-overridden-binding-2.stderr
error[E0271]: type mismatch resolving `<std::vec::IntoIter<u32> as std::iter::Iterator>::Item == i32`
  --> $DIR/associated-types-overridden-binding-2.rs:6:43
   |
LL |     let _: &dyn I32Iterator<Item = u32> = &vec![42].into_iter();
   |                                           ^^^^^^^^^^^^^^^^^^^^^ expected `i32`, found `u32`
   |
   = note: required for the cast to the object type `dyn std::iter::Iterator<Item = u32, Item = i32>`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0271`.
